@@ -36,21 +36,20 @@ import java.util.StringTokenizer;
  * Date: 2/24/15
  * Time: 10:58 AM
  */
-public class HttpQueryParams implements Cloneable
-{
+public class HttpQueryParams implements Cloneable {
     private final ListMultimap<String, String> delegate;
     private final boolean immutable;
     private final HashMap<String, Boolean> trailingEquals;
 
-    public HttpQueryParams()
-    {
+    private static final String UTF_8 = "UTF-8";
+
+    public HttpQueryParams() {
         delegate = ArrayListMultimap.create();
         immutable = false;
         trailingEquals = new HashMap<>();
     }
 
-    private HttpQueryParams(ListMultimap<String, String> delegate)
-    {
+    private HttpQueryParams(ListMultimap<String, String> delegate) {
         this.delegate = delegate;
         immutable = ImmutableListMultimap.class.isAssignableFrom(delegate.getClass());
         trailingEquals = new HashMap<>();
@@ -73,8 +72,8 @@ public class HttpQueryParams implements Cloneable
                 String value = s.substring(i + 1);
 
                 try {
-                    name = URLDecoder.decode(name, "UTF-8");
-                    value = URLDecoder.decode(value, "UTF-8");
+                    name = URLDecoder.decode(name, UTF_8);
+                    value = URLDecoder.decode(value, UTF_8);
                 }
                 catch (Exception e) {
                     // do nothing
@@ -92,7 +91,7 @@ public class HttpQueryParams implements Cloneable
                 String name = s;
 
                 try {
-                    name = URLDecoder.decode(name, "UTF-8");
+                    name = URLDecoder.decode(name, UTF_8);
                 }
                 catch (Exception e) {
                     // do nothing
@@ -109,24 +108,19 @@ public class HttpQueryParams implements Cloneable
      * Get the first value found for this key even if there are multiple. If none, then
      * return null.
      */
-    public String getFirst(String name)
-    {
+    public String getFirst(String name) {
         List<String> values = delegate.get(name);
-        if (values != null) {
-            if (values.size() > 0) {
-                return values.get(0);
-            }
+        if (!values.isEmpty()) {
+            return values.get(0);
         }
         return null;
     }
 
-    public List<String> get(String name)
-    {
+    public List<String> get(String name) {
         return delegate.get(name.toLowerCase());
     }
 
-    public boolean contains(String name)
-    {
+    public boolean contains(String name) {
         return delegate.containsKey(name);
     }
 
@@ -138,37 +132,31 @@ public class HttpQueryParams implements Cloneable
         return delegate.containsKey(name) || delegate.containsKey(name.toLowerCase(Locale.ROOT));
     }
 
-    public boolean contains(String name, String value)
-    {
+    public boolean contains(String name, String value) {
         return delegate.containsEntry(name, value);
     }
 
     /**
      * Replace any/all entries with this key, with this single entry.
      */
-    public void set(String name, String value)
-    {
+    public void set(String name, String value) {
         delegate.removeAll(name);
         delegate.put(name,  value);
     }
 
-    public void add(String name, String value)
-    {
+    public void add(String name, String value) {
         delegate.put(name, value);
     }
 
-    public void removeAll(String name)
-    {
+    public void removeAll(String name) {
         delegate.removeAll(name);
     }
 
-    public void clear()
-    {
+    public void clear() {
         delegate.clear();
     }
 
-    public Collection<Map.Entry<String, String>> entries()
-    {
+    public Collection<Map.Entry<String, String>> entries() {
         return delegate.entries();
     }
 
@@ -176,15 +164,14 @@ public class HttpQueryParams implements Cloneable
         return delegate.keySet();
     }
 
-    public String toEncodedString()
-    {
+    public String toEncodedString() {
         StringBuilder sb = new StringBuilder();
         try {
             for (Map.Entry<String, String> entry : entries()) {
-                sb.append(URLEncoder.encode(entry.getKey(), "UTF-8"));
+                sb.append(URLEncoder.encode(entry.getKey(), UTF_8));
                 if (!Strings.isNullOrEmpty(entry.getValue())) {
                     sb.append('=');
-                    sb.append(URLEncoder.encode(entry.getValue(), "UTF-8"));
+                    sb.append(URLEncoder.encode(entry.getValue(), UTF_8));
                 }
                 else if (isTrailingEquals(entry.getKey())) {
                     sb.append('=');
@@ -205,8 +192,7 @@ public class HttpQueryParams implements Cloneable
     }
 
     @Override
-    public String toString()
-    {
+    public String toString() {
         StringBuilder sb = new StringBuilder();
         for (Map.Entry<String, String> entry : entries()) {
             sb.append(entry.getKey());
@@ -225,20 +211,17 @@ public class HttpQueryParams implements Cloneable
     }
 
     @Override
-    protected HttpQueryParams clone()
-    {
+    protected HttpQueryParams clone() {
         HttpQueryParams copy = new HttpQueryParams();
         copy.delegate.putAll(this.delegate);
         return copy;
     }
 
-    public HttpQueryParams immutableCopy()
-    {
+    public HttpQueryParams immutableCopy() {
         return new HttpQueryParams(ImmutableListMultimap.copyOf(delegate));
     }
 
-    public boolean isImmutable()
-    {
+    public boolean isImmutable() {
         return immutable;
     }
 
@@ -251,14 +234,12 @@ public class HttpQueryParams implements Cloneable
     }
 
     @Override
-    public int hashCode()
-    {
+    public int hashCode() {
         return delegate.hashCode();
     }
 
     @Override
-    public boolean equals(Object obj)
-    {
+    public boolean equals(Object obj) {
         if (obj == null)
             return false;
         if (! (obj instanceof HttpQueryParams))
